# C0deTracker

./: .gitignore  CMakeLists.txt  LICENSE  Readme.md  effects.txt
examples/SFML/: CMakeLists.txt  custom_sfml_stream.cpp  custom_sfml_stream.hpp  main.cpp
examples/songs/: CMakeLists.txt  examples.hpp  frere_jacques.cpp  frere_jacques.hpp  fzero_intro.cpp  fzero_intro.hpp  global_instruments.cpp  global_instruments.hpp  kirbys_dreamland_greengreens.cpp  kirbys_dreamland_greengreens.hpp  nokia3310_DUSHMAN_REMOVER.hpp  nokia3310_DUSHMAN_REMOVER_Battle.cpp  nokia3310_DUSHMAN_REMOVER_GameOver.cpp  nokia3310_DUSHMAN_REMOVER_Menu.cpp  smb1_overworld.cpp  smb1_overworld.hpp  sonic_greenhillzone.cpp  sonic_greenhillzone.hpp  ssf2_credit.cpp  ssf2_credit.hpp  track_test.cpp  tutorial.cpp  tutorial.hpp
examples_of_how_to_use_CODETRACKER/SFML/: custom_sfml_stream.cpp  custom_sfml_stream.hpp  main.cpp
include/: c0de_tracker.hpp  code_tracker.hpp
songs/: examples.hpp  frere_jacques.cpp  fzero_intro.cpp  kirbys_dreamland_greengreens.cpp  smb1_overworld.cpp  sonic_greenhillzone.cpp  ssf2_credit.cpp  tutorial.cpp  tutorial.hpp
src/: c0de_tracker.cpp  channel.cpp  code_tracker.cpp  code_tracker.hpp  editor.cpp  example.cpp  example.hpp  instrument.cpp  oldtrack.cpp  oscillator.cpp  psg.cpp  track.cpp  track_data.cpp
